# rust-embed-spa

./: Cargo.toml  README.md  build.rs
app/: package.json
app/src/: App.tsx
src/: main.rs
